# spcm

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  make_docs.py  pyproject.toml  repo-key.asc  repo-key.gpg  requirements.txt  setup.py  spectrum-instrumentation.list
.github/workflows/: spcm-create-artifact.yml  spcm-docs-pages.yml  spcm-publish-to-pypi.yml
docs/: index.html  spcm.html
src/examples/: LICENSE  README.md  requirements.txt
src/examples/01_acquisition/: 01_acq_single.py  02_acq_single_2ch.py  03_acq_fifo.py  04_acq_multi.py  05_acq_gated.py  06_acq_single_digital.py  07_acq_fifo_gated.py  08_acq_fifo_multi_ts_poll.py  09_acq_synchronous_digital_in.py  10_acq_boxcar.py  11_acq_block_average.py  12_acq_block_statistics.py  13_acq_aba.py  14_acq_boxcar_fifo.py
src/examples/02_generation/: 1_gen_single.py  3_gen_multi.py  4_gen_fifo.py  6_gen_single_digital.py  8_gen_synchronous_digital_out.py
src/examples/03_dds/: 02_dds_multiple_static_carriers.py  03_dds_ramp_single_carrier.py  04_dds_ramp_multiple_carriers.py  05_dds_timed_frequency_changes.py  06_dds_time_continuous_changes.py  07_dds_multiple_carriers_channels.py  08_dds_modulation.py  09_dds_external_trigger.py  10_dds_xio.py  11_dds_sync.py  12_dds_complex_ramps.py  13_dds_command_list_streaming.py  14_dds_command_queue_streaming.py  15_dds_repeated_patterns.py  99_dds_graphical_user_interface.py
src/examples/04_pulse-generator/: 3_pg_delayed_trigger_pulse.py
src/examples/05_synchronization/: 1_sync_acq_single.py  2_sync_gen_single.py  3_sync_acq_fifo.py
src/examples/06_clock/: 1_clk_acq_internal_clock.py  2_clk_acq_external_reference_clock.py  3_clk_acq_direct_external_clock.py  4_clk_acq_special_clock.py
src/examples/07_trigger/: 1_trg_acq_software_trigger.py  2_trg_acq_external_trigger.py  3_trg_acq_external_trigger_gated.py  4_trg_acq_channel_trigger.py  5_trg_acq_channel_trigger_gated.py  6_trg_acq_combined_trigger.py
src/examples/08_jupyter/: 1_jup_acq_single.ipynb  3_jup_dds_single_static_carrier.ipynb
src/examples/09_tools/: 2_sbench_bin_files.py  3_file_io_acq.py
src/examples/10_cuda_scapp/: 1_cuda_acq_single_fft.py  4_scapp_acq_fifo_fft.py  7_scapp_acq_unpack_blockavg.py  requirements.txt
src/examples/1_acquisition/: 10_acq_boxcar.py  10_acq_file_io.py  11_acq_block_average.py  12_acq_block_statistics.py  1_acq_single.py  (+18 more)
src/spcm/: README.md  SUPPORTED_DEVICES.md  __init__.py  _version.py  classes_aba.py  classes_block_average.py  classes_block_statistics.py  classes_boxcar.py  classes_card.py  classes_card_stack.py  classes_channels.py  classes_clock.py  classes_cuda.py  classes_data_transfer.py  classes_dds.py  classes_dds_command_list.py  classes_dds_command_queue.py  classes_device.py  classes_error_exception.py  classes_functionality.py  classes_gated.py  classes_multi.py  classes_multi_purpose_ios.py  classes_netbox.py  classes_pulse_generators.py  classes_scapp.py  classes_sequence.py  classes_sync.py  classes_synchronous_digital_ios.py  classes_time_stamp.py  classes_trigger.py  classes_unit_conversion.py  constants.py  pyspcm.py  regs.py  spcerr.py
(+53 files in other folders)
