[build-system]
requires = ["setuptools", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "spcm"
authors = [
  { name='Spectrum Instrumentation GmbH', email='info@spec.de' },
]
description = "Package for Spectrum Instrumentation GmbH cards"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
dependencies = [
  "spcm_core >= 1.0.0",
  "numpy >= 1.23",
  "pint >= 0.24",
]

[project.optional-dependencies]
cuda = [
  "cupy >= 13.2.0",
  "cuda-python >= 12.5.0",
  "h5py >= 3.10.0",
]

[project.urls]
Homepage = "https://spectrum-instrumentation.com/"
API = "https://spectruminstrumentation.github.io/spcm/spcm.html"
Repository = "https://github.com/SpectrumInstrumentation/spcm"
Examples = "https://github.com/SpectrumInstrumentation/spcm/tree/master/src/examples"
"Knowledge Base" = "https://spectrum-instrumentation.com/support/knowledgebase/index.php"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spcm"] 
namespaces = false

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/spcm/_version.py"
tag_prefix = "v"
